repair missing-numbers modal logic and filters

--- a/docs/screens/desktop.ini
+++ b/docs/screens/desktop.ini
@@ -9,3 +9,15 @@ Capture d'écran 2026-01-29 013329.png=@Capture d'écran 2026-01-29 013329,0
 Capture d'écran 2026-01-29 013249.png=@Capture d'écran 2026-01-29 013249,0
 Capture d'écran 2026-01-29 013155.png=@Capture d'écran 2026-01-29 013155,0
 Capture d'écran 2026-01-29 013224.png=@Capture d'écran 2026-01-29 013224,0
+Capture d'écran 2026-01-30 202223.png=@Capture d'écran 2026-01-30 202223,0
+Capture d'écran 2026-01-30 201803.png=@Capture d'écran 2026-01-30 201803,0
+Capture d'écran 2026-01-30 202357.png=@Capture d'écran 2026-01-30 202357,0
+Capture d'écran 2026-01-30 202135.png=@Capture d'écran 2026-01-30 202135,0
+Capture d'écran 2026-01-30 202325.png=@Capture d'écran 2026-01-30 202325,0
+Capture d'écran 2026-01-30 202240.png=@Capture d'écran 2026-01-30 202240,0
+Capture d'écran 2026-01-30 202057.png=@Capture d'écran 2026-01-30 202057,0
+Capture d'écran 2026-01-30 202252.png=@Capture d'écran 2026-01-30 202252,0
+Capture d'écran 2026-01-30 202423.png=@Capture d'écran 2026-01-30 202423,0
+Capture d'écran 2026-01-30 202150.png=@Capture d'écran 2026-01-30 202150,0
+Capture d'écran 2026-01-30 202118.png=@Capture d'écran 2026-01-30 202118,0
+Capture d'écran 2026-01-30 202205.png=@Capture d'écran 2026-01-30 202205,0
